--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.526.0",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.61.1",
     "react-icons": "^5.4.0",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
